tests/golden/defaults/capi-provider-talos/capi-provider-talos/bootstrap/10_kustomize/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_cabpt-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: syn-cluster-api/cabpt-serving-cert
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: bootstrap-talos
  name: cabpt-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cabpt-webhook-service
      namespace: syn-cluster-api
      path: /validate-bootstrap-cluster-x-k8s-io-v1alpha3-talosconfig
  failurePolicy: Fail
  name: vtalosconfig.cluster.x-k8s.io
  rules:
  - apiGroups:
    - bootstrap.cluster.x-k8s.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    resources:
    - talosconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cabpt-webhook-service
      namespace: syn-cluster-api
      path: /validate-bootstrap-cluster-x-k8s-io-v1alpha3-talosconfigtemplate
  failurePolicy: Fail
  name: vtalosconfigtemplate.cluster.x-k8s.io
  rules:
  - apiGroups:
    - bootstrap.cluster.x-k8s.io
    apiVersions:
    - v1alpha3
    operations:
    - UPDATE
    resources:
    - talosconfigtemplates
  sideEffects: None
