tests/golden/defaults/capi-provider-talos/capi-provider-talos/bootstrap/10_kustomize/apps_v1_deployment_cabpt-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: bootstrap-talos
    control-plane: controller-manager
  name: cabpt-controller-manager
  namespace: syn-cluster-api
spec:
  replicas: 1
  selector:
    matchLabels:
      cluster.x-k8s.io/provider: bootstrap-talos
      control-plane: controller-manager
  template:
    metadata:
      labels:
        cluster.x-k8s.io/provider: bootstrap-talos
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --enable-leader-election
        - --feature-gates=MachinePool=false
        - --diagnostics-address=:8443
        - --insecure-diagnostics=false
        command:
        - /manager
        image: ghcr.io/siderolabs/cluster-api-talos-controller:v0.6.13
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP
        - containerPort: 8443
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsGroup: 65532
          runAsUser: 65532
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: cabpt-webhook-service-cert
