tests/golden/defaults/capi-provider-talos/capi-provider-talos/bootstrap/10_kustomize/rbac.authorization.k8s.io_v1_clusterrole_cabpt-talosconfig-editor-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: bootstrap-talos
  name: cabpt-talosconfig-editor-role
rules:
- apiGroups:
  - bootstrap.cluster.x-k8s.io
  resources:
  - talosconfigs
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - bootstrap.cluster.x-k8s.io
  resources:
  - talosconfigs/status
  verbs:
  - get
  - patch
  - update
