tests/golden/defaults/capi-provider-talos/capi-provider-talos/bootstrap/10_kustomize/rbac.authorization.k8s.io_v1_clusterrolebinding_cabpt-talosconfig-editor-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: bootstrap-talos
  name: cabpt-talosconfig-editor-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cabpt-talosconfig-editor-role
subjects:
- kind: ServiceAccount
  name: default
  namespace: syn-cluster-api
