tests/golden/defaults/capi-provider-talos/capi-provider-talos/bootstrap/10_kustomize/rbac.authorization.k8s.io_v1_rolebinding_cabpt-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: bootstrap-talos
  name: cabpt-leader-election-rolebinding
  namespace: syn-cluster-api
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: cabpt-leader-election-role
subjects:
- kind: ServiceAccount
  name: default
  namespace: syn-cluster-api
