tests/golden/defaults/capi-provider-talos/capi-provider-talos/bootstrap/10_kustomize/v1_service_cabpt-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: bootstrap-talos
    control-plane: controller-manager
  name: cabpt-controller-manager-metrics-service
  namespace: syn-cluster-api
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    cluster.x-k8s.io/provider: bootstrap-talos
    control-plane: controller-manager
